# real_college_experience

./: Cargo.toml  README.md  index.html  real_college_experience.js
.cargo/: config.toml
assets/: scene.gltf
src/: control.rs  light.rs  main.rs  objects.rs
