[package]
name = "real_college_experience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["wayland"] }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.2"
bevy_mod_picking = "0.12.0"
bevy_panorbit_camera = "0.2.0"
bevy_rapier3d = {version = "0.21.0", features = ["debug-render-3d"]}
 bevy_vox_mesh  = "0.6.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
